# Vision-Agents

./: .coderabbit.yaml  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIO_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  ROADMAP.md  TELNYX_EXAMPLE_PLAN.md  conftest.py  cricket_umpire.md  dev.py  docker-compose.yml  memory_leak_repro.py  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml  (+1 more)
examples/01_simple_agent_example/: Dockerfile  README.md  instructions.md  pyproject.toml  simple_agent_example.py  test_simple_agent.py
examples/01_simple_agent_example/nomad/: agent.nomad.hcl  deploy.sh
examples/01_simple_agent_example/terraform/: .gitignore  github-oidc.tf  main.tf  nomad.tf  terraform.tfvars.example  variables.tf
examples/03_phone_and_rag_example/: README.md  conftest.py  inbound_phone_and_rag_example.py  outbound_phone_example.py  phone_and_rag_example.py  pyproject.toml  rag_turbopuffer.py  rag_utils.py  test_rag_turbopuffer.py  utils.py
examples/07_function_calling_example/: __init__.py  function_calling_example.py  openai_function_calling_test.py  pyproject.toml
examples/08_custom_agent_with_functions/: __init__.py  pyproject.toml  simple_custom_agent.py
examples/09_cricket_umpire/: README.md  cricket_umpire.md  cricket_umpire.py  pyproject.toml  requirements.txt  run.sh  token_server.py
examples/09_cricket_umpire/frontend/src/: App.css  App.jsx
examples/09_local_transport_example/: README.md  local_transport_example.py  pyproject.toml
examples/09_mcp_integration_example/: README.md  __init__.py  github.env.example  github_mcp_example.py  mcp_example.py  pyproject.toml  simple_mcp_test.py  test_github_mcp.py
examples/10_computer_use_example/: README.md  computer_use_example.py  instructions.md  pyproject.toml
examples/10_sales_assistant_example/: README.md  main.py  pyproject.toml
examples/11_monty_agent_example/: README.md  display.py  instructions.py  monty_agent_example.py  pyproject.toml
examples/11_monty_agent_example/sandbox/: __init__.py  search.py  stubs.py  tools.py
examples/12_resale_advisor_example/: pyproject.toml  resale_advisor_example.py
examples/moondream_example/: main-cloud-detection.py  main-local-detection.py  main-local-llm.py  main-tiled-detection.py  pyproject.toml
examples/other_examples/gemini_rag_demo/: README.md  __init__.py  gemini_rag_demo.py  pyproject.toml
examples/other_examples/get-in-shAIpe/: DEBUGGING.md  DEBUG_EVENT_SUBSCRIPTION.md  IMPROVEMENTS.md  LOGGING_SUMMARY.md  README.md  TTS_SETUP.md  TUNING_GUIDE.md  VOICE_OUTPUT_OPTIONS.md  config.py  main.py  pyproject.toml  squat-coach.md  squat_counter_processor.py  squat_events.py  squat_yolo_processor.py
examples/other_examples/local_rag_demo/: README.md  __init__.py  local_rag_demo.py  pyproject.toml
examples/other_examples/openai_rag_demo/: README.md  __init__.py  openai_rag_demo.py  pyproject.toml
plugins/cartesia/example/: README.md  main.py  narrator-example.py  pyproject.toml
plugins/decart/example/: decart_example.py  pyproject.toml
plugins/fast_whisper/example/: fast_whisper_example.py  pyproject.toml
plugins/funasr/example/: funasr_example.py  pyproject.toml
plugins/gemini/example/: gemini_vlm_agent_example.py  gemini_vlm_annotation_example.py  gemini_vlm_example.py  gemini_vlm_on_demand_example.py  gemini_vlm_standalone_example.py  pyproject.toml
plugins/gradium/example/: gradium_example.py  pyproject.toml
plugins/huggingface/: README.md  pyproject.toml
plugins/huggingface/example/: README.md  main.py  pyproject.toml
plugins/huggingface/examples/inference_api/: baseten_vlm_example.py  inference_api_example.py  inference_api_vlm_example.py  pyproject.toml
plugins/huggingface/examples/transformers/: pyproject.toml  transformers_detection_example.py  transformers_llm_example.py  transformers_mcp_tool_calling_example.py  transformers_segmentation_example.py  transformers_tool_calling_example.py  transformers_vlm_example.py
plugins/huggingface/tests/: test_hf_tool_calling.py  test_huggingface.py  test_transformers_detection.py  test_transformers_llm.py  test_transformers_segmentation.py  test_transformers_vlm.py
plugins/huggingface/vision_agents/plugins/huggingface/: __init__.py  _hf_tool_calling.py  _local_inference.py  _local_vlm.py  _tool_call_loop.py  events.py  huggingface_llm.py  huggingface_vlm.py  mlx_llm.py  mlx_vlm.py  transformers_detection.py  transformers_llm.py  transformers_segmentation.py  transformers_vlm.py
plugins/krisp/: __init__.py  plugin.py  pyproject.toml
plugins/krisp/vision_agents/plugins/krisp/: __init__.py  turn_detection.py
plugins/litellm/: README.md  pyproject.toml
plugins/litellm/tests/: test_litellm_llm.py
plugins/litellm/vision_agents/plugins/litellm/: __init__.py  litellm_llm.py
plugins/qdrant/: README.md  pyproject.toml
plugins/qdrant/tests/: test_qdrant_rag.py
plugins/qdrant/vision_agents/plugins/qdrant/: __init__.py  qdrant_rag.py
plugins/roboflow/: README.md  pyproject.toml
plugins/roboflow/example/: README.md  env.example  instructions.md  roboflow_example.py  utils.py
plugins/roboflow/examples/detection/: pyproject.toml
plugins/roboflow/examples/moderation/: README.md  env.example  moderation_example.py  pyproject.toml
plugins/roboflow/tests/: test_roboflow.py
plugins/roboflow/vision_agents/plugins/roboflow/: __init__.py  events.py  roboflow_cloud_processor.py  roboflow_local_processor.py  roboflow_processor.py  utils.py
plugins/sam3/: README.md  main.py  pyproject.toml
plugins/sam3/example/: README.md  pyproject.toml  sam3_example.py  sam3_instructions.md
plugins/sam3/tests/: test_sam3.py
plugins/sam3/vision_agents/plugins/sam3/: __init__.py  processor.py  video_track.py
plugins/vibevoice/: README.md  pyproject.toml
plugins/vibevoice/example/: agent_example.py  example.py  pyproject.toml  vibevoice_example.py
plugins/vibevoice/tests/: test_tts.py
plugins/vibevoice/vision_agents/plugins/vibevoice/: __init__.py  tts.py
(+950 files in other folders)
