[project]
name = "simple-agents-example"
version = "0.0.0"
requires-python = ">=3.13"

# put only what this example needs
dependencies = [
  "python-dotenv>=1.0",
  "getstream[webrtc]==2.3.0a5",
  "stream-agents",
  "krisp_audio",
  "resampy",
]

[tool.uv.sources]
"stream-agents" = {path = "../../stream-agents", editable=true}
krisp-audio = { path = "../../stream-agents/getstream_agents/turn_detection/krisp/krisp_audio-1.4.0-cp313-cp313-macosx_12_0_arm64.whl" }
