[project]
name = "simple-agents-example"
version = "0.0.0"
requires-python = ">=3.13"

# put only what this example needs
dependencies = [
  "python-dotenv>=1.0",
  "getstream[webrtc]==2.3.0a5",
  "stream-agents",
  "krisp_audio",
]

[tool.uv]
find-links = ["./stream_agents/turn_detection/krisp/wheels"]

[tool.uv.sources]
"stream-agents" = {path = "../../stream-agents", editable=true}
