[project]
name = "local-transport-example"
version = "0.0.0"
requires-python = ">=3.10"

# Dependencies for local audio transport
dependencies = [
  "python-dotenv>=1.0",
  "vision-agents-plugins-deepgram",
  "vision-agents-plugins-elevenlabs",
  "vision-agents-plugins-gemini",
  "vision-agents[local]",  # Includes sounddevice
  "sounddevice>=0.5.0",
]

[tool.uv.sources]
"vision-agents-plugins-deepgram" = {path = "../../plugins/deepgram", editable=true}
"vision-agents-plugins-elevenlabs" = {path = "../../plugins/elevenlabs", editable=true}
"vision-agents-plugins-gemini" = {path = "../../plugins/gemini", editable=true}
"vision-agents" = {path = "../../agents-core", editable=true}
