[project]
name = "resale-advisor-example"
version = "0.0.0"
requires-python = ">=3.10"

dependencies = [
  "python-dotenv>=1.0",
  "vision-agents-plugins-huggingface[mlx-vlm,transformers]",
  "vision-agents-plugins-getstream",
  "vision-agents-plugins-deepgram",
  "vision-agents",
  "mlx-vlm",
  "torchvision",
]

[tool.uv.sources]
"vision-agents-plugins-huggingface" = {path = "../../plugins/huggingface", editable=true}
"vision-agents-plugins-getstream" = {path = "../../plugins/getstream", editable=true}
"vision-agents-plugins-deepgram" = {path = "../../plugins/deepgram", editable=true}
"vision-agents" = {path = "../../agents-core", editable=true}
