[project]
name = "moondream-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vision-agents>=0.1.0",
    "vision-agents-plugins-getstream",
    "vision-agents-plugins-gemini",
    "vision-agents-plugins-openai",
    "vision-agents-plugins-moondream",
    "vision-agents-plugins-deepgram",
    "vision-agents-plugins-elevenlabs",
]

[tool.uv.sources]
vision-agents = { path = "../../agents-core", editable = true }
vision-agents-plugins-getstream = { path = "../../plugins/getstream", editable = true }
vision-agents-plugins-gemini = { path = "../../plugins/gemini", editable = true }
vision-agents-plugins-moondream = { path = "../../plugins/moondream", editable = true }
vision-agents-plugins-deepgram = { path = "../../plugins/deepgram", editable = true }
vision-agents-plugins-elevenlabs = { path = "../../plugins/elevenlabs", editable = true }
vision-agents-plugins-openai = { path = "../../plugins/openai", editable = true }