[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vision-agents-plugins-huggingface"
dynamic = ["version"]
description = "HuggingFace Inference integration for Vision Agents"
readme = "README.md"
keywords = ["huggingface", "LLM", "AI", "voice agents", "agents", "inference"]
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "vision-agents",
    "huggingface_hub>=0.20.0,<2",
]

[project.optional-dependencies]
transformers = [
    "transformers>=5.3.0,<6",
    "torch>=2.0.0,<3",
    "accelerate>=0.25.0,<2",
    "supervision>=0.21.0,<1",
    "opencv-python>=4.8.0,<5",
]
transformers-quantized = [
    "vision-agents-plugins-huggingface[transformers]",
    "bitsandbytes>=0.41.0",
]
mlx = [
    "mlx>=0.22.0",
    "mlx-lm>=0.22.0",
]
mlx-vlm = [
    "mlx>=0.22.0",
    "mlx-vlm>=0.4.0",
    "av",
    "aiortc",
]

[project.urls]
Documentation = "https://visionagents.ai/"
Website = "https://visionagents.ai/"
Source = "https://github.com/GetStream/Vision-Agents"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", search_parent_directories = true, fallback_version = "0.0.0" }

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = ["/vision_agents"]

[tool.uv.sources]
vision-agents = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
