[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream-agents-plugin-krisp"
dynamic = ["version"]
description = "Krisp for stream agents"
license = "Apache-2.0"
requires-python = ">=3.9.0"
dependencies = [
    "stream-agents",
    "krisp-audio>=1.4.0",
]


[tool.hatch.version]
path = "./version.py"

[tool.hatch.build.targets.wheel]
packages = ["getstream"]

[tool.hatch.build.targets.sdist]
include = ["/stream-agents"]

[tool.uv.sources]
# Map the package name to a local wheel path (or dir). uv will resolve from here.
"krisp-audio" = { path = "./krisp_audio-1.4.0-cp313-cp313-macosx_12_0_arm64.whl" }