[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vision-agents-plugins-litellm"
dynamic = ["version"]
description = "LiteLLM plugin for Vision Agents - access 100+ LLM providers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "vision-agents",
    "litellm>=1.60.0,<2.0.0",
]

[project.urls]
Documentation = "https://visionagents.ai/"
Website = "https://visionagents.ai/"
Source = "https://github.com/GetStream/Vision-Agents"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", search_parent_directories = true, fallback_version = "0.0.0" }

[tool.hatch.build.targets.wheel]
packages = ["vision_agents"]
