[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vision-agents-plugins-qdrant"
dynamic = ["version"]
description = "Qdrant RAG integration for Vision Agents with hybrid search"
readme = "README.md"
keywords = ["qdrant", "RAG", "vector-search", "hybrid-search", "AI", "voice agents", "agents"]
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "vision-agents",
    "qdrant-client[fastembed]>=1.12.0,<1.18.0",
    "langchain-text-splitters>=1.1.1",
]

[project.urls]
Documentation = "https://visionagents.ai/"
Website = "https://visionagents.ai/"
Source = "https://github.com/GetStream/Vision-Agents"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", search_parent_directories = true, fallback_version = "0.0.0" }

[tool.hatch.build.targets.wheel]
packages = ["vision_agents"]

[tool.hatch.build.targets.sdist]
include = ["/vision_agents"]


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "testcontainers[redis,qdrant]>=4.0.0",
]
