[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vision-agents-plugins-roboflow"
dynamic = ["version"]
description = "Roboflow object detection plugin for Vision Agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "vision-agents",
    "roboflow>=1.1.0",
    "numpy>=2.0.0",
    "pillow>=10.4.0",
    "opencv-python>=4.8.0",
]

[project.urls]
Documentation = "https://visionagents.ai/"
Website = "https://visionagents.ai/"
Source = "https://github.com/GetStream/Vision-Agents"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", search_parent_directories = true, fallback_version = "0.0.0" }

[tool.hatch.build.targets.wheel]
packages = [".", "vision_agents"]

[tool.uv.sources]
vision-agents = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

