[project]
name = "local-rag-demo"
version = "0.1.0"
description = "Demo of Local RAG with pluggable components"
requires-python = ">=3.11"
dependencies = [
    "vision-agents",
    "vision-agents-plugins-openai",
    "python-dotenv",
    "aiofiles",
]

[tool.uv.sources]
vision-agents = { path = "../../../agents-core" }
vision-agents-plugins-openai = { path = "../../../plugins/openai" }

