[project]
name = "cartesia-example"
version = "0.0.0"
requires-python = ">=3.10"

dependencies = [
    "vision-agents",
    "python-dotenv>=1.0",
    "vision-agents-plugins-cartesia",
    "vision-agents-plugins-getstream",
    "vision-agents-plugins-openai",
]

[tool.uv.sources]
"vision-agents" = { path = "../../../agents-core", editable = true }
"vision-agents-plugins-cartesia" = { path = "..", editable = true }
"vision-agents-plugins-getstream" = { path = "../../getstream", editable = true }
"vision-agents-plugins-openai" = { path = "../../openai", editable = true }
