[project]
name = "decart-example"
version = "0.0.0"
requires-python = ">=3.10"

dependencies = [
  "vision-agents",
  "python-dotenv",
  "vision-agents-plugins-gemini",
  "vision-agents-plugins-decart",
  "vision-agents-plugins-elvenlabs",
  "vision-agents-plugins-getstream",


]

[tool.uv.sources]
vision-agents = { workspace = true }
vision-agents-plugins-getstream = { editable=true }
vision-agents-plugins-gemini = { editable=true }
vision-agents-plugins-elevenlabs = { editable=true }
vision-agents-plugins-decart = { editable=true }

