[project]
name = "fast-whisper-example"
version = "0.1.0"
description = "Fast Whisper STT example"
requires-python = ">=3.10"
dependencies = [
    "vision-agents",
    "vision-agents-plugins-fast-whisper",
    "vision-agents-plugins-aws",
    "vision-agents-plugins-cartesia",
    "vision-agents-plugins-getstream",
    "vision-agents-plugins-smart-turn",
    "python-dotenv",
]

[tool.uv.sources]
vision-agents = { path = "../../../agents-core", editable = true }
vision-agents-plugins-fast-whisper = { path = "../../", editable = true }
vision-agents-plugins-aws = { path = "../../../aws", editable = true }
vision-agents-plugins-cartesia = { path = "../../../cartesia", editable = true }
vision-agents-plugins-getstream = { path = "../../../getstream", editable = true }
vision-agents-plugins-smart-turn = { path = "../../../smart_turn", editable = true }

