[project]
name = "gemini-vlm-example"
version = "0.0.0"
requires-python = ">=3.10,<3.14"

dependencies = [
  "python-dotenv>=1.0",
  "vision-agents-plugins-gemini",
  "vision-agents",
]

[tool.uv.sources]
"vision-agents-plugins-gemini" = {path = "..", editable=true}
"vision-agents" = {path = "../../../agents-core", editable=true}
